@@ -1,3 +1,9 @@
+2002-11-06  David O'Brien  <obrien@FreeBSD.org>
+            Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-sparc.c (sparc64_elf_relocate_section): Adjust addend of
+	dynamic relocs against section symbols for the output section vma.
+
 2002-10-31  David O'Brien  <obrien@FreeBSD.org>
 
 	* elf-eh-frame.c (_bfd_elf_discard_section_eh_frame): Don't mix
